<resources>
    <string name="app_name">SUT&#160;Virtual&#160;Tour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map_text">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="camera_map">Camera Map</string>
    <string name="location">Location</string>
    <string name="player_error">Error initializing YouTube player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f1">อาคารเครื่องมือ 1</string>
    <string name="library">&#160;&#160;ศูนย์บรรณสารและสื่อการศึกษาเป็นหน่วยงานที่รับ
        ผิดชอบด้านการจัดบริการห้องสมุดและสื่อการศึกษา เพื่อสนับสนุนการเรียนการสอนและการวิจัย
        ของมหาวิทยาลัยมีหน้าที่จัดหารวบรวมทรัพยากรสารสนเทศและจัดเก็บทรัพยากรสารสนเทศอย่าง
        มีระบบ เพื่อเป็นแหล่งบริการสารสนเทศทางวิชาการ รวมทั้งให้บริการด้านโสตทัศนูปกรณ์ บริการ
        เอกสารกลาง บริการกราฟิกและศิลปกรรมแก่หน่วยงานต่างๆของมหาวิทยาลัย
    </string>
    <string name="building_1">&#160;&#160;เป็นศูนย์การเรียนการสอนวิชาบรรณยายเเละสัมนา
        ของทุกสาขาวิชา เป็นลักษณะ Lecture Teacher
        มีการติดตั้งระบบโสตทัศนูปกรณ์สมบูรณ์เเบบ
        รวมทั้งระบบคอมพิวเตอร์เพื่อช่วยการสอน
        เเละมีห้องสัมนาหรือห้องติว เป็นต้น โดยอาคารเรียนรวม 1
        มีห้องประชุมขนาด 1500 ที่นั่ง</string>
    <string name="building_2">&#160;&#160;เป็นศูนย์การเรียนการสอนวิชาบรรณยายเเละสัมนา
        ของทุกสาขาวิชา เป็นลักษณะ Lecture Teacher
        มีการติดตั้งระบบโสตทัศนูปกรณ์สมบูรณ์เเบบ
        รวมทั้งระบบคอมพิวเตอร์เพื่อช่วยการสอน
        เเละมีห้องสัมนาหรือห้องติว เป็นต้น โดยอาคารเรียนรวม 2
        มีห้องประชุมขนาด 600 ที่นั่ง</string>
    <string name="activity_student">&#160;&#160;อาคารกิจการนักศึกษา เป็นสถานที่ทำการของส่วนกิจการนักศึกษา
        เช่น ชมรม ที่ทำการขององค์การนักศึกษา</string>
    <string name="sura_sport">&#160;&#160;เป็นสถานที่ทำการของหน่วยงานกิจกรรมนักศึกษา สถานกีฬาเเละสุขภาพ
        มีสถานที่สำหรับออกกำลังกายเช่น ห้องฟิตเนส ห้องโยคะ รวมถึงสระว่ายน้ำ ให้บริการเเก่นักศึกษา ยุคคลากร
        รวมถึงบุคคลภายนอกมหาวิทยาลัย</string>
    <string name="sport_center">&#160;&#160;สถานกีฬาเป็นสถานที่ออกกำลังกายหลากหลายรูปเเบบ เช่น บาสเกตบอล
        เทนนิส วอลเลย์บอล รักบี้ ฟุตบอล ปิงปอง ลีลาศ เป็นต้น</string>
    <string name="sutV">SUT Virtual Tour</string>
    <string name="version">Version 1.0</string>
    <string name="map">&#160;&#160;&#160;เป็นแผนที่ของมหาวิทยาลัยเทคโนโลยีสุรนารี
        </string>
    <string name="map_1">เเอพลิเคชั่นนี้เป็นส่วนหนึ่งของการเรียนวิชาโครงงาน</string>
    <string name="map_2">ซอฟต์เเวร์วิสาหกิจ เพื่อใช้ในการเเสดงข้อมูลเกี่ยวกับ</string>
    <string name="map_3">มหาวิทยาลัยเทคโนโลยีสุรนารี อำเภอเมือง จังวัดนครราชสีมา</string>
    <string name="about">Develop by </string>
    <string name="name_1">Sudsangdaow Duangthai</string>
    <string name="name_2">Wissarut Sangjong</string>
    <string name="study">Information Technology ,Enterprise Software  @SUT</string>
    <string name="icon">Icon from</string>
    <string name="icon_from">https://www.iconfinder.com/</string>
    <string name="icon_from_1">http://www.myiconfinder.com/</string>
    <string name="video">Youtube from</string>
    <string name="youtube">Channel:Ravinan Intarasorn</string>
    <string name="image">Images from</string>
    <string name="image_from">Blog Khun:https://www.facebook.com/cmckmag</string>
    <string name="title_activity_map__direction">Map</string>
    <string name="F_1_6">&#160;&#160;&#160;ศูนย์เครื่องมือวิทยาศาสตร์เเละเทคโนโลยี
    ประกอบไปด้วยอาคาร 6 หลัง เป็นศูนย์กลาง
    ที่ให้บริการเครื่องมือเเละอุปกรณ์ที่ใช้ในการเรียนการสอน
    สถานที่เก็บรักษาเเละซ่อมวัสดุอุปกรณ์ต่างๆ
    เช่น ห้องปฎิบัติการวิศวกรรมพื้นฐาน
    ห้องปฎิบัติการทางเทคโนโลยี
    ห้องทดลองวิทยาศาสตร์เเละเทคโนโลยี
    ห้องเขียนเเบบเเละ Sound Lab เป็นต้น</string>
    <string name="Building_C">&#160;&#160;&#160;เป็นอาคารศูนย์กลางการบริหารวิชาการของสำนักวิชาต่างๆ
        โดยอาคารวิชาการ 1 ประกอบด้วยสำนักวิชาวิศวกรรมศาตร์
        เเละสำนักวิชาเทคโนโลยีสังคม ส่วนอาคารวิชาการ 2
        ประกอบด้วยสำรักวิชาวิทยาศาสตร์เเละสำนักวิชา
        เทคโนโลยีการเกษตร</string>
    <string name="building_a">&#160;&#160;&#160;เป็นสถานที่ทำการของสำนักงานอธิการบดี 
        สำนักงานสภามหาวิทยาลัย ส่วนการเจ้าหน้าที่ ส่วนการเงินเเละบัญชี 
        ส่วนแผนงาน เป็นต้น ประกอบด้วย ห้องทำงานอธิการบดี รองอธิการบดีฝ่ายต่างๆ
        และมีห้องประชุมทางไกล 
</string>
    <string name="hotel">&#160;&#160;&#160;เป็นโรงแรมที่พักขนาด 150 ห้อง
        มีห้องจัดประชุมขนาดใหญ่ ห้องประชุมขนาดเล็กสำหรับการจัดประชุม
        สัมนางานต่างๆ มีห้อง Lobby ห้องอาคาร และสระว่ายน้ำขนาดใหญ่
</string>
    <string name="bus">&#160;&#160;&#160;อาคารขนส่งเป็นสถานที่ขนส่งรถโดยสารประจำทางทั้งในและนอกมหาวิทยาลัย
        ยังมีบริการรถเมล์ฟรีตามจุดต่างๆทั่วมหาวิทยาลัย</string>


    <string-array name="countries_array">
        <item>อาคารเรียนรวม 1</item>
        <item>อาคารเรียนรวม 2</item>
        <item>บรรณสาร</item>
        <item>อาคารเครื่องมือ 1</item>
        <item>อาคารเครื่องมือ 2</item>
        <item>อาคารเครื่องมือ 3</item>
        <item>อาคารเครื่องมือ 4</item>
        <item>อาคารเครื่องมือ 5</item>
        <item>อาคารเครื่องมือ 7</item>
        <item>อาคารเครื่องมือ 7</item>
        <item>ฟาร์มหาวิทยาลัย</item>
        <item>อุโมงต้นไม้</item>
        <item>อุทยานผีเสื้อ</item>
    </string-array>


    <string-array name="countries_array_to">
        <item>อาคารเรียนรวม 1</item>
        <item>อาคารเรียนรวม 2</item>
        <item>บรรณสาร</item>
        <item>อาคารเครื่องมือ 1</item>
        <item>อาคารเครื่องมือ 2</item>
        <item>อาคารเครื่องมือ 3</item>
        <item>อาคารเครื่องมือ 4</item>
        <item>อาคารเครื่องมือ 5</item>
        <item>อาคารเครื่องมือ 7</item>
        <item>อาคารเครื่องมือ 7</item>
        <item>ฟาร์มหาวิทยาลัย</item>
        <item>อุโมงต้นไม้</item>
        <item>อุทยานผีเสื้อ</item>
    </string-array>

    <string name="farm">&#160;&#160;ฟาร์มมหาวิทยาลัย ได้เริ่มบุกเบิกพัฒนาพื้นที่ด้านท
        ิศตะวันตกเฉียงเหนือของมหาวิทยาลัย เมื่อวันที่
        1 กรกฎาคม 2536 มีพิธีเปิดฟาร์มอย่างเป็นทางการเมื่อวันที่
        22 ธันวาคม 2538 พื้นที่ทั้งหมดประมาณ
        1500 ไร่ เเยกเป็นพื้นที่ผลิตพืช เเละการผลิตสัตว์
        1100 ไร่ ส่วนอีก 400 ไร่ เป็นส่วนสนันสนุนการผลิต เช่น สำนักงาน
        พื้นที่สำหรับจักรกลการเกษตร อาคาร อ่างเก็บน้ำ ถนนเเละสวนสาธารณะ
    </string>
<string name="suranapa">&#160;&#160;เป็นหอสูงรูปทรงดอกบัว สูง
    82.30 เมตร มีทางขึ้นสู่ยอดหอ
    2 ทางคือ บันไดเเละลิฟท์ ด้านบนหอ
    เป็นจุดชมวิวของมหาวิทยาลัย</string>
    <string name="hospital">&#160;&#160;เป็รโรงพยาบาลที่ให้บริการเเก่ผู้ป่วย
    ภายในเเละภายนอกมหาวิทยาลัย อุบัติเหตุฉุกเฉินบริการ 24 ชม. โดยมีทีมเเพทย์เเละบุคคลากรผู้เชี่ยวชาญ
    บริการตรวจรักษาให้กับนักศึกษาเเละประชาชนทั่วไป</string>
    <string name="yamo">&#160;&#160;สัญลักษณ์สถาน เป็นอนุสรณ์สถานประจำมหาวิทยาลัย โดยมีรูปเเบบเดียวกับ
ตราประจำมหาวิทยาลัย ประกอบด้วย ภาพเท้าสุรนารี ณ ใจกลาง เส้นโค้ง
งอนหงายขนาบ 2 ข้างของภาพ ภาพละ 4 เส้น
เเละมีภาพเชิงนามธรรมของพืชพรรณเเละเฟืองจักรรองรับฐานของภาพท้าวสุรนารี
</string>
    <string-array name="place_name">
        <item></item>
        <item>ฟาร์มมหาวิทยาลัย</item>
        <item>อาคารกีฬา</item>
        <item>อาคารสุรเริงไชย</item>
        <item>อาคารกิจการนักศึกษา</item>
        <item>อาคารเรียนรวม 1</item>
        <item>อาคารเรียนรวม 2</item>
        <item>อาคารบรรณสาร</item>
        <item>ลานสัญลักษณ์</item>
        <item>เสาธง</item>
        <item>อาคารเครื่องมือ 1</item>
        <item>อาคารเครื่องมือ 2</item>
        <item>อาคารเครื่องมือ 3</item>
        <item>อาคารเครื่องมือ 4</item>
        <item>อาคารเครื่องมือ 5</item>
        <item>อาคารเครื่องมือ 6</item>
        <item>อาคารเครื่องมือ 7</item>
        <item>อาคารวิชาการ 1</item>
        <item>อาคารวิชาการ 2</item>
        <item>อาคารบริหาร</item>
        <item>ศูนย์คอมพิวเตอร์</item>
        <item>โรงอาหารกลาง</item>
        <item>อาคารขนส่ง</item>
        <item>อาคารสุรพัฒน์ 1</item>
        <item>อาคารสุรพัฒน์ 2</item>
        <item>โรงแรมสุรสัมนาคาร</item>
        <item>เมืองจราจรจำลอง</item>
        <item>สถาบันวิยเเสงซินโครตอน</item>
        <item>หอสุรนภา</item>
        <item>พิพิธภัณฑ์เทคโนโลยีไทยโบราณ</item>
        <item>อุทยานผีเสื้อ</item>
        <item>แอมฟิเทียร์เตอร์</item>
        <item>อาคารกาญจนาภิเษก</item>
        <item>หอดูดาว</item>
        <item>โรงพยาบาลมหาวิทยาลัย</item>
    </string-array>
</resources>
