<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sudsangdoaw.sutvirtour.Information">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#0091EA"
        android:orientation="horizontal" >

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/color"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/icon_infor"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            />

        <TextView
            android:id="@+id/clickme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-light"
            android:text="About application" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="80dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/sutV"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_3" />

    </LinearLayout>
    <!-- /////////////////////////////////////////////////-->

    <LinearLayout
        android:id="@+id/header_1"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#EF6C00"
        android:orientation="horizontal" >
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/color_1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/develop"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            />
        <TextView
            android:id="@+id/clickme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-light"
            android:text="Developers" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/expandable_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="315dp"
        android:background="#FFF"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold"
            android:layout_below="@+id/header_1"
            android:layout_alignLeft="@+id/header_1"
            android:layout_alignStart="@+id/header_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_1"
            android:layout_below="@+id/header_1"
            android:layout_alignLeft="@+id/header_1"
            android:layout_alignStart="@+id/header_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_2"
            android:layout_below="@+id/header_1"
            android:layout_alignLeft="@+id/header_1"
            android:layout_alignStart="@+id/header_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study"
            android:layout_below="@+id/header_1"
            android:layout_alignLeft="@+id/header_1"
            android:layout_alignStart="@+id/header_1" />
    </LinearLayout>
    <!-- //////////////////////////////////////////////////////-->
    <LinearLayout
        android:id="@+id/header_2"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#C51162"
        android:orientation="horizontal" >
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/color_2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/refer"
            android:gravity="center_vertical"
            android:text=""
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            />
        <TextView
            android:id="@+id/clickme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-light"
            android:text="References" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/expandable_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="478dp"
        android:background="#FFF"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_from"
/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_from_1"
       />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_from"

            />

    </LinearLayout>





</RelativeLayout>
</ScrollView>